# bip39

bip39_solver/: Cargo.toml
bip39_solver/src/: main.rs
bip39_solver_server/: index.js  package-lock.json
